# hackathon-compadre

./: .gitignore
compadre-app/: README.md  index.html  package-lock.json  package.json  server.js
compadre-app/src/: App.vue  constant.js  findProducts.js
compadre-app/src/assets/: base.css  main.css
compadre-app/src/components/: ListingsResults.vue  ProductsList.vue  SearchProduct.vue
compadre-app/src/router/: index.js
compadre-app/src/views/: AboutView.vue  HomeView.vue  Results.vue
compadre-image-api/: Dockerfile  Procfile  app.py  compose.yml  lab.ipynb  pyproject.toml
compadre-image-api/config/: custom_uvicorn_worker.py  gunicorn_conf.py  uvicorn_conf.py  validation_config.py
compadre-image-api/model/: image_comparison.py  image_description.py  image_recognition.py  openai_agent.py
compadre-image-api/model/config/: prompt.py
compadre-marketplace-scraper/: .gitignore  app.py
compadre-marketplace-scraper/scrappers/: amazon.py  facebook.py
compadre_products/: main.py  requirements.txt
compadre_products/scrappers/: amazon.py
