[tool.poetry]
name = "compadre"
version = "0.1.0"
description = "Hackathon project - Use Image detection to describe a Picture"
authors = ["Jean Philippe Petit-Frere <jeanphilippe.petitfrere@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
pydantic = "^2.9.2"
fastapi = "^0.115.0"
openai = "^1.50.0"
python-dotenv = "^1.0.1"
opencv-python = "^4.10.0.84"
imagehash = "^4.3.1"
image-similarity-measures = {extras = ["speedups"], version = "^0.3.6"}
gunicorn = "^23.0.0"
uvicorn = "^0.30.6"
requests = "^2.32.3"
python-multipart = "^0.0.10"
pyfftw = "^0.14.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
